k8s/config-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_ENABLED
              value: "false"
            - name: SPRING_CLOUD_KUBERNETES_ENABLED
              value: "true"
            - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
              value: "true"
            - name: SPRING_AUTOCONFIGURE_EXCLUDE
              value: "org.springframework.cloud.netflix.eureka.loadbalancer.LoadBalancerEurekaAutoConfiguration"
        - name: config-service
          image: markizasckuza/fungible-config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 70
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
