k8s/contactus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-us-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contact-us-service
  template:
    metadata:
      labels:
        app: contact-us-service
    spec:
      containers:
      - env:
        - name: EUREKA_CLIENT_ENABLED
          value: "false"
        - name: SPRING_CLOUD_KUBERNETES_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
          value: "true"
#        - name: SPRING_CLOUD_KUBERNETES_RELOAD_MODE
#          value: "event"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_STRATEGY
          value: "RESTART_CONTEXT"
        - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_DISCOVERY_DISCOVERY-SERVER-URL
          value: "http://spring-cloud-kubernetes-discoveryserver.default.svc.cluster.local"
        - name: SPRING_CLOUD_KUBERNETES_CONFIG_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_CONFIG_NAMESPACE
          value: "default"
        - name: SPRING_CLOUD_KUBERNETES_CONFIG_NAME
          value: "contact-us-service"
        - name: SPRING_CLOUD_KUBERNETES_CONFIG_SOURCES_NAME
          value: "c1"
        - name: SPRING_AUTOCONFIGURE_EXCLUDE
          value: "org.springframework.cloud.netflix.eureka.loadbalancer.LoadBalancerEurekaAutoConfiguration"
        image: markizasckuza/fungible-contact-us-service:latest
        imagePullPolicy: Always
        name: contact-us-service
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8080
