k8s/k8s-cs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-configserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-configserver
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-configserver
    spec:
      containers:
        - name: spring-cloud-kubernetes-configserver
          image: springcloud/spring-cloud-kubernetes-configserver:3.0.1
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8888
              path: /actuator/health/liveness
          ports:
            - containerPort: 8888
