k8s/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: config-service
  name: config-service
spec:
  type: ClusterIP
  selector:
    app: config-service
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
