k8s/k8s-cs-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-configserver
  name: spring-cloud-kubernetes-configserver
spec:
  type: ClusterIP
  selector:
    app: spring-cloud-kubernetes-configserver
  ports:
    - name: http
      port: 8888
      targetPort: 8888
