k8s/k8s-ds-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud-kubernetes-discoveryserver
  name: spring-cloud-kubernetes-discoveryserver
spec:
  type: ClusterIP
  selector:
    app: spring-cloud-kubernetes-discoveryserver
  ports:
    - name: http
      port: 80
      targetPort: 8761
